# notebooks

./: Lab3_Introdução_a_Classificação_de_Texto_utilizando_TF_IDF_e_Embeddings.ipynb  [TAREFA] lab_1_iteracao_de_valor.ipynb  [TAREFA]_lab_2_iteracao_de_politica.ipynb  aula07___dados_biologicos2.ipynb  convert_to_notebook.py  pyproject.toml  runner.ipynb  subtitles_delayer.ipynb
ipynb/: ANN.ipynb  Lab3_Introdução_a_Classificação_de_Texto_utilizando_TF_IDF_e_Embeddings.ipynb  [TAREFA] lab_1_iteracao_de_valor.ipynb  [TAREFA] lab_3_iteracao_de_politica_truncada.ipynb  [TAREFA] lab_5_MC_inicios_exploratorios.ipynb  [TAREFA] lab_6_MC_epsilon_guloso.ipynb  runner.ipynb  subtitles_delayer.ipynb  teste.ipynb  teste.py
rl/: [TAREFA] lab_4_MC_basico.ipynb
src/: 01_value_iteration.py  02_policy_iteration.py  04_mc_basic.py  06_mc_e_greedy.py  joy.py  mc_inicio_exploratorio.py  policy_iteration.py  prompt.md  solving.py  solving_01.py  tasks.md  value_iteration.py
src/finance/: finance.py
src/fractals/: joy.py
src/reinforcement_learning_dynamic/: mc_e_greedy.py  policy_iteration_truncaded.py  value_iteration.py
src/transformers/: tranformers.py
src/utils/: ambiente.py  convert_to_notebook.py  l_system.py  plot.py
src_safe/: 02_policy_iteration.py  03_policy_iteration_truncaded.py  04_mc_basic.py
