[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["s4hlo <rafael.nunes@tarken.ag>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
numpy = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
nbconvert = "^7.16.6"
jupytext = "^1.17.3"
tqdm = "^4.67.1"
nbclient = "^0.10.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
